ESQL:DS: add heap attack tests for EXTERNAL
This adds a suite of heap attacks covering text and Parquet formats, raw
and zstd, served over an s3 fixture.